--- a/anaglyphic.css
+++ b/anaglyphic.css
@@ -16,6 +16,18 @@ body {
 	margin-bottom: 20px;
 }
 
+.divShapes{
+	border:1px solid;
+	border-radius:25px;
+	-moz-border-radius:25px; /* Firefox 3.6 and earlier */
+	margin-left: auto;
+	margin-right: auto;
+	width: 500px;
+	text-align: center;
+	margin-top: 20px;
+	margin-bottom: 20px;
+}
+
 .divH1 {
 	text-align: center;
 	border:2px solid;
